samples/_failures_safe/1761710944_71f809_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21092b53.c: In function ‘main’:
./samples/SAFE/__tmp_21092b53.c:157:16: error: missing terminating " character
  157 |         printf("\nError: Integer
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_21092b53.c:157:9: error: expected expression at end of input
  157 |         printf("\nError: Integer
      |         ^~~~~~
./samples/SAFE/__tmp_21092b53.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21092b53.c:157:9: error: expected declaration or statement at end of input
